<resources>
    <string name="app_name">My Application</string>
    <string name="checkout">Check Out</string>
    <string name="YourLocation">Your Location</string>
    <string name="location">location</string>
    <string name="Dropoff">Drop Off Option</string>
    <string name="Handit">Hand It To Me</string>
    <string name="Leave">Leave at the Door</string>
    <string name="Tip">Tip Your Courier</string>
    <string name="Tipw">Your Tip can be great countribution fulfilling their wish</string>
    <string name="Rs5">Rs 05</string>
    <string name="RS10">RS 10</string>
    <string name="Rs20">RS 20</string>
    <string name="RS">RS</string>
    <string name="Oder">Oder Details</string>
    <string name="pay">Proceed To Pay</string>
    <string name="payment">Select Payment Method</string>
    <string name="Visa">Credit Or Debit Card</string>
    <string name="Cash">Cash On Delevery</string>
    <string name="Total">Total</string>
    <string name="Confirm">Confirm And Pay</string>
    <string name="Card_Details">Card Details</string>
    <string name="NAme">Card Holder Name</string>
    <string name="Card_name">Card Holder Name</string>
    <string name="Number">Card Number</string>
    <string name="Expir">"Expir "</string>
    <string name="CVC">cvc</string>
    <string name="Save">Save This Card</string>
    <string name="Pay">Pay</string>
    <string name="Done">Payment Done !</string>
    <string name="OderConfirm">Oder Confirm !</string>
    <string name="Return">Return To Home</string>
    <string name="APPNAme">LOCAL TREASURES</string>
    <string name="Starter">"LETS GET START "</string>
    <string name="Started">LEST GET STARTED</string>
    <string name="startede">LETS GET STARTED</string>
    <string name="Continue">CONTINUE</string>
    <string name="Logoname"><![CDATA[Shop small, Shop local with us]]></string>
    <string name="Address">Your Address</string>
    <string name="PhNumber">Phone Number</string>
    <string name="UpdateandDelete">Update And Delete Card Detail</string>
    <string name="Update">Update And Delete Card Detail</string>
    <string name="Update_Button">Update Card Details</string>
    <string name="Update_B1">Update</string>
    <string name="Delete_B1">Delete</string>
    <string name="Ubpdate">Update</string>
</resources>