<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".payment_Done">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="353dp"
        android:layout_height="88dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="35dp"
        android:text="@string/Done"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="381dp"
        android:layout_height="82dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:text="@string/OderConfirm"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="303dp"
        android:layout_height="273dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/checkmark" />

    <Button
        android:id="@+id/button9"
        android:layout_width="173dp"
        android:layout_height="106dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#434345"
        android:text="@string/Return"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/button"
        android:layout_width="168dp"
        android:layout_height="108dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#434345"
        android:text="UPDATE AND DELETE "
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:strokeColor="#434345" />
</androidx.constraintlayout.widget.ConstraintLayout>