<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:textAlignment="center"
    tools:context="@string/location">

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginStart="128dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="128dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/checkout"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#434345"
        android:text="@string/pay"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="272dp"
        android:layout_height="94dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="278dp"
        android:layout_height="90dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="78dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Contact Number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName12" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="269dp"
        android:layout_height="73dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="National ID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="277dp"
        android:layout_height="84dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Your Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

</androidx.constraintlayout.widget.ConstraintLayout>