<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Card_Details">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="261dp"
        android:layout_height="128dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/_000_f_470324701_pu8ytztie9itvglxsvlvvpgp7kzg6ldy" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="301dp"
        android:layout_height="36dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:text="@string/Card_Details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="165dp"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CVC"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button7"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#434345"
        android:text="@string/Pay"
        app:iconTint="@color/colour"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName8"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="129dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName19"
        app:srcCompat="@drawable/whatsapp_image_2023_03_19_at_11_23_15_am" />

    <EditText
        android:id="@+id/editTextTextPersonName17"
        android:layout_width="303dp"
        android:layout_height="83dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Card Holder Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/editTextTextPersonName19"
        android:layout_width="281dp"
        android:layout_height="61dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Expir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName18" />

    <EditText
        android:id="@+id/editTextTextPersonName18"
        android:layout_width="314dp"
        android:layout_height="82dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Card Number"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName17" />

</androidx.constraintlayout.widget.ConstraintLayout>